fix spacing on buttom

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,6 @@ h3,h4{
 color: #A99781;
 text-shadow: 5px 5px 5px black;
 }
+button {
+  margin-top: 10px;
+}
